--- a/kinh-nghiem/linh-tinh/index.html
+++ b/kinh-nghiem/linh-tinh/index.html
@@ -102,18 +102,22 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
 @media (max-width: 399px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:10px; }
+  .portimg { width:100%; }
 
 }
 @media (min-width: 400px) and (max-width: 499px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:20px; }
+  .portimg { width:100%; }
 
 }
 @media (min-width: 500px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:40px; }
+  .portimg { margin: auto; width:45%; }
 
 }
 @media (min-width: 1260px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:40px; }
+  .portimg { margin: auto; width:45%; }
 
 }
 
@@ -187,7 +191,9 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h1>Những kinh-nghiệm linh-tinh trong cuộc-sống</h1>
 <dl>
   <dt><a href="can-biet">Những điều NÊN và KHÔNG NÊN làm trong thời Internet</a></dt>
+  <dt><a href='xe-dien-xang'>So sánh chi-phí giữa dùng xe-gắn-máy-điện và xe-gắn-máy-xăng</a></dt>
   <dt><a href='bep'>So sánh chi-phí giữa dùng bếp-ga—bếp-điện-cảm-ứng—lò-microwave</a></dt>
+  <dt><a href='dia-chi'>Đánh số nhà theo công-nghệ mới</a></dt>
   <dt><a href='ac-dc'>Điện một chiều và điện xoay chiều</a></dt>
   <dt><a href='tieu-thu-dien'>Đo công suất tiêu thụ điện một số máy nhỏ thường gặp</a></dt>
   <dt><a href='dien-standby'>Điện standby tốn bao nhiêu?</a></dt>
