--- a/kinh-nghiem/linh-tinh/payment-card.html
+++ b/kinh-nghiem/linh-tinh/payment-card.html
@@ -202,12 +202,15 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 <dl>
 <dt>Thẻ-tín-dụng—credit card</dt>
 <dd><div class="flright"><amp-img alt="Thẻ-tín-dụng" src="/images/The_noi_dia_Napas.png" width="503" height="320" layout="responsive"></amp-img></div>Thẻ-tín-dụng gắn với một hạn-mức tín-dụng mà tổ-chức-phát-hành-thẻ cấp cho chủ-thẻ. Khi chủ-thẻ dùng thẻ để trả-tiền, bên-bán-hàng sẽ nhận được tiền từ tổ-chức-phát-hành-thẻ, chủ-thẻ nợ tổ-chức-phát-hành-thẻ. Các khoản-nợ đó sẽ được cộng dồn lại, và chủ-thẻ trả nợ cho tổ-chức-phát-hành-thẻ hàng-tháng.
+<br>Trên mặt thẻ có in chữ <b>Credit</b> hoặc chữ <b>Thẻ tín dụng</b>.
 <br style="clear:both"></dd>
 <dt>Thẻ-ghi-nợ—debit card</dt>
 <dd><div class="flleft"><amp-img alt="Thẻ-ghi-nợ" src="/images/nam-a-bank-debit.png" width="380" height="240" layout="responsive"></amp-img></div>Thẻ-ghi-nợ gắn với một tài-khoản thanh-toán tại ngân-hàng. Khi chủ-thẻ dùng thẻ để trả-tiền, tiền sẽ được chuyển từ tài-khoản đó sang tài-khoản của bên-bán-hàng.
+<br>Trên mặt thẻ có in chữ <b>Debit</b> hoặc không.
 <br style="clear:both"></dd>
 <dt>Thẻ-trả-trước—prepaid card</dt>
 <dd><div class="flright"><amp-img alt="Thẻ-trả-trước" src="/images/the-prepaid.png" width="363" height="239" layout="responsive"></amp-img></div>Thẻ-trả-trước gần giống với thẻ-ghi-nợ; điểm khác nhau giữa hai loại thẻ này là tài-khoản thẻ-trả-trước không cần tên người, và chỉ có-thể rút-tiền từ tài-khoản đó bằng thẻ.
+<br>Trên mặt thẻ có in chữ <b>Prepaid</b>.
 <br style="clear:both"></dd> 
 </dl>
 
@@ -216,7 +219,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 <p>Thẻ-ghi-nợ ra đời sau thẻ-tín-dụng, đầu-tiên chỉ để rút-tiền từ tài-khoản qua máy ATM, gọi là thẻ-ATM, sau đó mới có thêm công-dụng thanh-toán cho bên-bán-hàng.</p>
 <p>Thẻ-trả-trước ra đời sau thẻ-ghi-nợ, dành cho những người cần những tiện-nghi của thẻ nhưng không muốn hoặc không thể có tài-khoản thanh-toán.</p>
 
-<p>Ban-đầu thẻ không có chứa nội-dung dạng điện-tử, chứng-từ giao-dịch hoàn-toàn trên giấy như sau. Trên thẻ có dập-nổi tên chủ-thẻ, số-thẻ, tháng và năm thẻ hết hiệu-lực. Khi thanh-toán, bên-bán-hàng sẽ viết số-tiền lên chứng-từ ba lớp, đặt thẻ dưới ba lớp giấy chứng-từ trong một cái khuôn rồi dùng dụng-cụ ép lên chứng-từ để những chữ và số từ thẻ được in hằn lên chứng-từ, đó là bằng chứng có thẻ trong giao-dịch. Kế-đó chủ-thẻ ký lên chứng-từ, bên-bán-hàng sẽ so-sánh chữ-ký trên chứng-từ với chữ-ký đã ký sẵn ở mặt-sau của thẻ. Ba lớp chứng-từ sẽ được tách ra giao cho ba bên: chủ-thẻ, bên-bán-hàng, và tổ-chức-phát-hành-thẻ.</p>
+<p>Ban-đầu thẻ-tín-dụng không có chứa nội-dung dạng điện-tử, chứng-từ giao-dịch hoàn-toàn trên giấy như sau. Trên thẻ có dập-nổi tên chủ-thẻ, số-thẻ, tháng và năm thẻ hết hiệu-lực. Khi thanh-toán, bên-bán-hàng sẽ viết số-tiền lên chứng-từ ba lớp, đặt thẻ dưới ba lớp giấy chứng-từ trong một cái khuôn rồi dùng dụng-cụ ép lên chứng-từ để những chữ và số từ thẻ được in hằn lên chứng-từ, đó là bằng chứng có thẻ trong giao-dịch. Kế-đó chủ-thẻ ký lên chứng-từ, bên-bán-hàng sẽ so-sánh chữ-ký trên chứng-từ với chữ-ký đã ký sẵn ở mặt-sau của thẻ. Ba lớp chứng-từ sẽ được tách ra giao cho ba bên: chủ-thẻ, bên-bán-hàng, và tổ-chức-phát-hành-thẻ.</p>
 <div><amp-img src="/images/Manual_Credit_Card_Machine.png" width="1260" height="756" layout="responsive"></amp-img></div>
 <p>Sau-đó, thẻ có một dải-từ ở mặt sau, dải-từ chứa các nội-dung như được in trên mặt thẻ. Máy POS có thể đọc các nội-dung đó từ dải-từ rồi in ra giấy nhanh và rõ hơn.</p>
 <p>Dải-từ bị sao-chép dễ-dàng nên có nhiều thẻ giả xuất-hiện. Người-ta chuyển sang dùng thẻ có chip. Chip là một máy-tính nhỏ như hạt-tấm, nằm dưới các tiếp-điểm kim-loại. Khi nhét thẻ vào máy POS, máy POS cấp điện cho chip hoạt-động và trao-đổi thông-tin đã mã-hoá với máy-tính của ngân-hàng trung-gian.</p>
@@ -230,10 +233,24 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 <h2>Các loại phí khi dùng thẻ-thanh-toán</h2>
 <p>Ở trên đã nêu phí-xử-lý-giao-dịch mà chủ-thẻ không phải trả trực-tiếp trong đa-số các trường-hợp. Ngay-cả-khi chủ-thẻ không trực-tiếp trả thì phí đó cũng được tính vào giá-bán hàng-hoá, trong trường-hợp này thì người không dùng thẻ cũng phải chịu phí. Mức phí này không giống nhau ở mọi nơi mà thay-đổi tuỳ theo doanh-số của mỗi nhà-bán-hàng. Có-thể đoán được rằng phí-giao-dịch thẻ-tín-dụng cao hơn thẻ-ghi-nợ, và phí-giao-dịch thẻ quốc-tế cao hơn thẻ nội-địa. Trong trường-hợp bên-bán-hàng tính phí-giao-dịch vào giá-bán thì họ đã tính một mức trung-bình cho tất-cả các loại thẻ.</p>
 <p>Ngoài phí-giao-dịch, chủ-thẻ phải trả phí-phát-hành khi làm thẻ lần đầu và phí-thường-niên cho mỗi năm dùng thẻ. Hai loại phí này thay-đổi theo thương-hiệu thẻ và các tiện-nghi kèm theo thẻ. Một vài ngân-hàng miễn phí-phát-hành và phí-thường-niên cho vài loại thẻ phổ-thông.</p>
-<p>Khi dùng thẻ-tín-dụng mà không thanh-toán nợ hàng-tháng kịp thời cho tổ-chức-phát-hành-thẻ thì chủ-thẻ phải trả lãi. Mức lãi là hơn 20% mỗi năm trên thẻ quốc-tế và khoảng 14% mỗi năm trên thẻ nội-địa. Mức lãi này cao hơn lãi vay từ ngân-hàng nhưng thấp hơn rất nhiều so với lãi vay ngoài xã-hội. Vì-vậy thẻ-tín-dụng càng phổ-biến thì càng ngăn-ngừa các tệ-nạn cho-vay-nặng-lãi trong xã-hội.</p>
+<p>Khi dùng thẻ-tín-dụng mà không thanh-toán nợ hàng-tháng kịp thời cho tổ-chức-phát-hành-thẻ thì chủ-thẻ phải trả lãi. Mức lãi khoảng 30% mỗi năm trên thẻ quốc-tế và khoảng 14% mỗi năm trên thẻ nội-địa. Mức lãi này cao hơn lãi vay từ ngân-hàng nhưng thấp hơn rất nhiều so với lãi vay ngoài xã-hội. Vì-vậy thẻ-tín-dụng càng phổ-biến thì càng ngăn-ngừa các tệ-nạn cho-vay-nặng-lãi trong xã-hội.</p>
 <p>Ngoài-ra còn các loại phí phát-sinh trong những trường-hợp bất-thường, như-là phí làm lại thẻ, phí tra-soát…</p>
 <p>Hiện-nay các ngân-hàng rất thích khách-hàng dùng thẻ-tín-dụng quốc-tế vì có cơ-hội thu lãi cao khi chủ-thẻ không thanh-toán kịp. Để khuyến-khích khách-hàng dùng thẻ-tín-dụng quốc-tế, các ngân-hàng đặt ra các ưu-đãi như hoàn-tiền, thưởng dặm-bay, giảm-giá ở các thương-hiệu lớn.</p>
 
+<h2>Làm sao để có thẻ-thanh-toán</h2>
+<p>Rất dễ để có thẻ-ghi-nợ: chỉ cần trên 15 tuổi, có căn-cước-công-dân là được mở tài-khoản thanh-toán ở ngân-hàng, kèm theo tài-khoản đó là thẻ-ghi-nợ NAPAS hoặc Visa, MasterCard. Hầu-hết các ngân-hàng cho dùng tài-khoản thanh-toán và thẻ-ghi-nợ miễn-phí.</p>
+<p>Nếu chưa thể mở tài-khoản thanh-toán ở ngân-hàng thì có-thể dùng thẻ-trả-trước.</p>
+<p>Điều-kiện để có thẻ-tín-dụng khó hơn. Nguyên-tắc chung là bạn phải có ít-nhất một trong các điều-kiện:</p>
+<ul>
+<li>chứng-minh được thu-nhập ổn-định bằng hợp-đồng lao-động, có nhận-lương tháng qua ngân-hàng,</li>
+<li>có tài-sản, ví-dụ có sổ-tiết-kiệm, có hợp-đồng bảo-hiểm-nhân-thọ,</li>
+<li>có điểm-tín-dụng tốt.</li>
+</ul>
+<h3>Giải-thích về điểm-tín-dụng</h3>
+<p>Mỗi-người có <a href="https://www.investopedia.com/terms/c/credit_score.asp" target='_blank'>điểm-tín-dụng</a> từ khi bắt-đầu mượn tiền ở ngân-hàng. Ngân-hàng báo-cáo chi-tiết về quá-trình mượn tiền cho tổ-chức chấm-điểm-tín-dụng. Tuỳ-theo lịch-sử giao-dịch của mỗi-người, điểm-tín-dụng tăng hay giảm. Điểm từ 300 đến 579 là kém, từ 580 đến 669 là trung-bình, từ 670 đến 739 là tốt, từ 740 đến 799 là rất tốt, từ 800 đến 850 là tuyệt-vời. Ở Việt-Nam có một tổ-chức chấm-điểm-tín-dụng là <a href="https://cic.org.vn" target=_blank'>Trung tâm Thông tin tín dụng Quốc gia Việt Nam</a>.</p>
+<p>Để <a href="https://www.bankrate.com/personal-finance/credit/what-credit-score-do-you-start-with/" target='_blank'>tăng điểm-tín-dụng</a> thì bạn phải trả nợ đúng hạn, không nên dùng quá 30% hạn-mức thẻ-tín-dụng…</p>
+<p>Các bạn nên cố-gắng tạo điểm-tín-dụng tốt cho chính mình bắt-đầu bằng-cách làm một thẻ-tín-dụng với hạn-mức hợp-lý, dùng lâu-dài, và yêu-cầu ngân-hàng nâng hạn-mức dần lên. Nếu bạn ít có cơ-hội dùng thẻ thì cũng cố làm một thẻ-tín-dụng nội-địa ở một ngân-hàng miễn-phí hoặc phí thấp; dùng thẻ đó trả-tiền ở siêu-thị, cửa-hàng, trả tiền điện-nước-điện-thoại.
+<br>Các ngân-hàng thường nhấn-mạnh vào ích-lợi của thẻ-tín-dụng là dùng trước, trả tiền sau. Nhưng đó không phải là ích-lợi chính, ích-lợi chính của nó là một khoản tiền sẵn-sàng để dùng cho những việc bất-ngờ.</p>
 <h2>Các tiện-nghi dành cho chủ-thẻ</h2>
 <p>Tiện-nghi chính của thẻ là thanh-toán không dùng tiền-mặt, đỡ tốn công đem theo tiền bên người, đỡ tốn công đếm tiền. Thử hình-dung công đếm tiền ở doanh-nghiệp lớn như siêu-thị:</p>
 <ol>
