--- a/kinh-nghiem/linh-tinh/index.html
+++ b/kinh-nghiem/linh-tinh/index.html
@@ -191,19 +191,23 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h1>Những kinh-nghiệm linh-tinh trong cuộc-sống</h1>
 <dl>
   <dt><a href="can-biet">Những điều NÊN và KHÔNG NÊN làm trong thời Internet</a></dt>
+  <dt><a href='dia-chi'>Đánh số nhà theo công-nghệ mới</a></dt>
+  <dt><br></dt>
   <dt><a href='xe-dien-xang'>So sánh chi-phí giữa dùng xe-gắn-máy-điện và xe-gắn-máy-xăng</a></dt>
   <dt><a href='bep'>So sánh chi-phí giữa dùng bếp-ga—bếp-điện-cảm-ứng—lò-microwave</a></dt>
-  <dt><a href='dia-chi'>Đánh số nhà theo công-nghệ mới</a></dt>
   <dt><a href='ac-dc'>Điện một chiều và điện xoay chiều</a></dt>
   <dt><a href='tieu-thu-dien'>Đo công suất tiêu thụ điện một số máy nhỏ thường gặp</a></dt>
   <dt><a href='dien-standby'>Điện standby tốn bao nhiêu?</a></dt>
+  <dt><br></dt>
   <dt><a href='nutrition'>Dinh dưỡng, vận động và kiểm soát sức khoẻ</a></dt>
   <dt><a href='magchan'>Dùng thử Magchan để giặt</a></dt>
   <dt><a href='lau-nha'>Cách lau-nhà cho sạch đều khắp nhà</a></dt>
-  <dt><a href='may-lanh'>Hiểu rõ Máy lạnh</a></dt>
   <dt><a href='nong'>Bàn về tình trạng nóng</a></dt>
-  <dt><a href='CBDC'>Tìm-hiểu Tiền-điện-tử do chính-phủ phát-hành</a></dt>
+  <dt><a href='may-lanh'>Hiểu rõ Máy lạnh</a></dt>
   <dt><a href='nhiet-do'>Nhiệt độ suốt ngày ở Sài Gòn</a></dt>
+  <dt><br></dt>
+  <dt><a href='CBDC'>Tìm-hiểu Tiền-điện-tử do chính-phủ phát-hành</a></dt>
+  <dt><a href='payment-card'>Các loại thẻ-thanh-toán</a></dt>
   <dt><a href='tan-so-cua-tv'>Tần số của TV</a></dt>
   <dt><a href='hong-ngoai'>Chơi với tia hồng ngoại</a></dt>
 </dl>
