--- a/kinh-nghiem/linh-tinh/lau-nha.html
+++ b/kinh-nghiem/linh-tinh/lau-nha.html
@@ -105,18 +105,22 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
 @media (max-width: 399px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:10px; }
+  .portimg { width:100%; }
 
 }
 @media (min-width: 400px) and (max-width: 499px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:20px; }
+  .portimg { width:100%; }
 
 }
 @media (min-width: 500px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:40px; }
+  .portimg { margin: auto; width:45%; }
 
 }
 @media (min-width: 1260px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:40px; }
+  .portimg { margin: auto; width:45%; }
 
 }
 
@@ -265,7 +269,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 <br>Việc gắn và tháo giẻ-lau ở cây-lau-nhà này rất dễ. Để gắn giẻ-lau, trải miếng giẻ-lau xuống đất, cầm cây-lau-nhà sao cho hai miếng thép gập một góc vừa đủ cho đầu mỗi miếng thép chui vào miệng túi ở một đầu của giẻ-lau, ấn cán cây-lau-nhà xuống thì hai miếng thép sẽ vào khớp thẳng hàng với nhau, không tự gập góc được và giữ giẻ-lau chắc chắn. Để tháo giẻ-lau thì dùng chân đạp lên đầu giẻ-lau bên miếng thép nhỏ, kéo cán cây-lau-nhà lên thì hai miếng thép sẽ gập góc với nhau và rút ra khỏi hai cái túi của giẻ-lau. Một kiểu gắn giẻ-lau khác là dùng hai lớp velcro để giẻ lau dính vào đầu cây-lau-nhà.
 <br>Việc gắn và tháo giẻ-lau nhanh chóng là ưu-điểm để dùng cây-lau-nhà kiểu này ở nơi công-cộng. Nhân-viên vệ-sinh đem theo nhiều miếng giẻ-lau đủ để lau sạch một diện-tích lớn, các miếng giẻ-lau đã thấm nước và vắt vừa đủ để sẵn-sàng lau, nhân-viên vệ-sinh lần lượt dùng từng miếng giẻ-lau để lau hết diện-tích sàn, sau đó đem tất-cả những giẻ-lau dơ đi giặt chung một lượt.
 <br>Có thể thấy ưu-điểm của cây-lau-nhà chữ-nhật là mọi phần của sàn-nhà đều sạch như nhau vì đều được lau bằng những miếng giẻ-lau đã được giặt cùng một lượt. Những nơi công-cộng, dùng nhiều giẻ-lau thì có thể giặt giẻ-lau bằng máy-giặt để đỡ tốn sức người. Trong nhà ở gia-đình, chỉ cần khoảng năm tới mười miếng giẻ-lau để lau cả nhà thì có thể giặt bằng tay nếu không muốn dùng máy-giặt.</p>
-<p>Gần-đây có một loại giẻ-lau được làm từ sợi microfiber, được giới-thiệu là <a href="dungcuvesinh.com/gioi-thieu/microfiber-la-gi-khac-biet-voi-cotton/" target='_blank'>lau sạch hơn loại giẻ-lau làm từ sợi cotton</a>.</p>
+<p>Gần-đây có một loại giẻ-lau được làm từ sợi microfiber, được giới-thiệu là <a href="https://dungcuvesinh.com/gioi-thieu/microfiber-la-gi-khac-biet-voi-cotton/" target='_blank'>lau sạch hơn loại giẻ-lau làm từ sợi cotton</a>.</p>
 
 <h2>Lau-nhà sao-cho sạch đều</h2>
 <p>Nhà tôi có diện tích 126 mét vuông.</p>
