--- a/huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu.html
+++ b/huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu.html
@@ -105,18 +105,22 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
 @media (max-width: 399px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:10px; }
+  .portimg { width:100%; }
 
 }
 @media (min-width: 400px) and (max-width: 499px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:20px; }
+  .portimg { width:100%; }
 
 }
 @media (min-width: 500px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:40px; }
+  .portimg { margin: auto; width:45%; }
 
 }
 @media (min-width: 1260px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:40px; }
+  .portimg { margin: auto; width:45%; }
 
 }
 
@@ -224,25 +228,25 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <p>Các nhà kinh tế nói rằng đầu tư dài hạn vào quỹ đầu tư sẽ có lợi hơn gửi tiết kiệm ở ngân hàng. Lý thuyết đó có đúng trong thực tế không, và nhất là có đúng với thị trường Việt Nam không?</p>
   <h2>Kết quả thực tế</h2>
   <p>Trong bài này, tôi sẽ so sánh kết quả giữa hai phương tiện trên bằng những tính toán trên những số liệu thực tế trong một thời gian dài hơn 13 năm.
-  <br>Thời điểm bắt đầu tính là đầu năm 2009. Từ ngày đó đến ngày 29/12/2022 <!-- Chung!A3 -->
+  <br>Thời điểm bắt đầu tính là đầu năm 2009. Từ ngày đó đến ngày 13/07/2023 <!-- Chung!A3 -->
  là hơn 13 năm.</p>
-  <p>Giả sử anh A tích luỹ tiền bằng cách gửi tiết kiệm ở ngân hàng. Bắt đầu từ đầu năm 2009, mỗi bốn tuần (mỗi năm 13 lần ứng với 13 tháng lương) anh A gửi một triệu đồng vào một sổ tiết kiệm kỳ hạn 12 tháng ở Ngân hàng Ngoại thương Việt Nam, khi đáo hạn sổ đó thì nhập lãi vào gốc để gửi tiếp kỳ mới. Số tiền anh A đã gửi vào là 183 <!-- tiết!B2 -->
- triệu đồng. Vào ngày 29/12/2022 <!-- tiết!A2 -->
- tổng giá trị gốc và lãi là <b> 289,606 <!-- tiết!C2 -->
- triệu đồng</b>, tính ra lợi nhuận trung bình của việc tích luỹ này là <b> 6,31%/năm <!-- tiết!C1 -->
+  <p>Giả sử anh A tích luỹ tiền bằng cách gửi tiết kiệm ở ngân hàng. Bắt đầu từ đầu năm 2009, mỗi bốn tuần (mỗi năm 13 lần ứng với 13 tháng lương) anh A gửi một triệu đồng vào một sổ tiết kiệm kỳ hạn 12 tháng ở Ngân hàng Ngoại thương Việt Nam, khi đáo hạn sổ đó thì nhập lãi vào gốc để gửi tiếp kỳ mới. Số tiền anh A đã gửi vào là 190 <!-- tiết!B2 -->
+ triệu đồng. Vào ngày 13/07/2023 <!-- tiết!A2 -->
+ tổng giá trị gốc và lãi là <b> 303,321 <!-- tiết!C2 -->
+ triệu đồng</b>, tính ra lợi nhuận trung bình của việc tích luỹ này là <b> 6,18%/năm <!-- tiết!C1 -->
 
 </b>. Mặc dù trong 13 năm qua có những lúc lãi suất tiết kiệm lên đến 14%/năm, nhưng do anh A gửi góp theo thời gian nên những khoản tiền gửi trễ sinh ra ít tiền lãi hơn những khoản tiền gửi sớm. Lợi nhuận trung bình đó đang giảm dần vì lãi suất tiết kiệm đã thấp hơn số trung bình đó từ bảy năm nay. Số liệu tính toán <a href="https://docs.google.com/spreadsheets/d/1y8MlFiTKj5W-iJn-okNu5DF4hlFQX-dK-xxNzhUHDh4/edit?usp=sharing" target='_blank'>trong bảng tính sau</a>.</p>
 
-  <p>Giả sử anh B tích luỹ tiền bằng quĩ đầu tư VF1. Bắt đầu từ đầu năm 2009 mỗi bốn tuần anh B gửi một triệu đồng vào quỹ <b>VF1</b>. Số tiền anh B đã gửi vào cũng là 183 <!-- tiết!B2 -->
- triệu đồng như anh A. Vào ngày 29/12/2022 <!-- Chung!A3 -->
- giá trị tài khoản đầu tư của anh B là <b> 398,217 <!-- DCDS!J4 -->
- triệu đồng</b>. Lợi nhuận trung bình của việc tích luỹ này là <span class="red"><b> 10,47%/năm <!-- DCDS!J2 -->
+  <p>Giả sử anh B tích luỹ tiền bằng quĩ đầu tư VF1. Bắt đầu từ đầu năm 2009 mỗi bốn tuần anh B gửi một triệu đồng vào quỹ <b>VF1</b>. Số tiền anh B đã gửi vào cũng là 190 <!-- tiết!B2 -->
+ triệu đồng như anh A. Vào ngày 13/07/2023 <!-- Chung!A3 -->
+ giá trị tài khoản đầu tư của anh B là <b> 490,559 <!-- DCDS!J4 -->
+ triệu đồng</b>. Lợi nhuận trung bình của việc tích luỹ này là <span class="red"><b> 12,16%/năm <!-- DCDS!J2 -->
  </b></span>.</p>
 
   <p>Bảng dưới đây cho biết lợi nhuận trung bình của mọi khoản đầu tư đều đặn vào những quỹ đầu tư trong 10/5/3/2/1 năm qua.</p>
   <div><amp-img alt="Kết quả đầu tư đều đặn" src="/data/VFM.png" height="281" width="565" layout="responsive"></amp-img></a></div>
 
-  <p>Trong thực tế thì số tiền anh A có chắc chắn phải thấp hơn 289,606 <!-- tiết!C2 -->
+  <p>Trong thực tế thì số tiền anh A có chắc chắn phải thấp hơn 303,321 <!-- tiết!C2 -->
  triệu đồng vì:</p>
   <ol>
     <li>Tiền lãi khi đáo hạn sẽ bị làm tròn xuống đến hàng ngàn, và những tiền lẻ dưới chục ngàn hoặc trăm ngàn sẽ không được nhập vào gốc để sinh lời tiếp vì anh A thấy nó lẻ.</li>
@@ -250,7 +254,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
     <li>Không dễ để nhớ gửi tiền tiết kiệm đều đặn nhưng lại rất dễ để rút tiền ra dùng khi cần mua sắm iPhone, LED TV, scooter làm cho số tiền bị hao hụt nhiều.</li>
   </ol>
 
-  <p>Ngoài ra, khi gửi ngân hàng kiểu đó thì anh A phải giữ từ 14 đến 183 <!-- tiết!B2 -->
+  <p>Ngoài ra, khi gửi ngân hàng kiểu đó thì anh A phải giữ từ 14 đến 190 <!-- tiết!B2 -->
  sổ tiết kiệm. Có thời gian tôi cũng làm như vậy (online) và tôi cảm thấy vô cùng lúng túng với hàng loạt số trên màn hình. Trong khi đó đầu tư vào quỹ đầu tư thì mỗi người chỉ cần biết một vài số.
   <br>Ngân hàng cũng có một loại tiết kiệm mà không tạo ra nhiều sổ, đó là tiết kiệm gửi góp. Tôi khuyên các bạn đừng dùng các loại tiết kiệm gửi góp của các ngân hàng. Mặc dù nó có vẻ giống như các kế hoạch đầu tư ở chỗ góp tiền vào một tài khoản, nhưng các ngân hàng không chuyên quản lý sổ tiết kiệm dài hạn và họ cũng không thích việc đó nên lãi suất dạng đó thấp hơn lãi suất 12 tháng. Tôi đã có một kinh nghiệm không vui với loại tiết kiệm gửi góp đó, sẽ kể lại trong một trang khác.</p>
 
@@ -263,10 +267,10 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <p>Các số lãi suất ở trên là lãi kép nên thời gian càng dài thì kết quả càng lớn. Ví dụ với lãi suất như trên, gửi mỗi bốn tuần một triệu đồng sau 30 năm sẽ từ 390 triệu đồng:</p>
   <span class="red">
   <ul>
-    <li>được khoảng 1,006 <!-- So!A4 -->
+    <li>được khoảng 1,002 <!-- So!A4 -->
  tỉ đồng nếu gửi ngân hàng</li>
-    <li>được khoảng 2,469 <!-- So!A7 -->
- tỉ đồng nếu gửi quỹ đầu tư, <b>bằng 2,45 <!-- So!A8 -->
+    <li>được khoảng 3,445 <!-- So!A7 -->
+ tỉ đồng nếu gửi quỹ đầu tư, <b>bằng 3,43 <!-- So!A8 -->
  lần gửi ngân hàng</b></li>
   </ul>
   </span>
@@ -289,15 +293,15 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
 
   <h2 id="goldusd">Tiết kiệm bằng USD hoặc vàng có tốt hơn không?</h2>
-  <p>Tôi giả định rằng chị U mua 100 USD mỗi bốn tuần từ đầu năm 2009 đến nay chị U có 18.300 <!-- Gold!J3 -->
- USD tương đương 429,318 <!-- Gold!L4 -->
- triệu đồng và chị U đã bỏ ra hết 395,710 <!-- Gold!K3 -->
- triệu đồng, tính ra lợi nhuận trung bình của việc tích luỹ này là 1,2%/năm <!-- Gold!L2 -->
+  <p>Tôi giả định rằng chị U mua 100 USD mỗi bốn tuần từ đầu năm 2009 đến nay chị U có 19.000 <!-- Gold!J3 -->
+ USD tương đương 446,025 <!-- Gold!L4 -->
+ triệu đồng và chị U đã bỏ ra hết 412,079 <!-- Gold!K3 -->
+ triệu đồng, tính ra lợi nhuận trung bình của việc tích luỹ này là 1,14%/năm <!-- Gold!L2 -->
 .
-  <br>Lại giả định tiếp, từ đầu năm 2009 đến nay mỗi bốn tuần chị G dùng 100 USD mua một số gram vàng lẻ đến một phần triệu gram. Đến nay chị G có 417,149 <!-- Gold!I4 -->
- gram vàng, trị giá 24.323,93 <!-- Gold!J4 -->
- USD. Như vậy với cùng số tiền bỏ ra như chị U, nhưng chị G thu lại được nhiều hơn 32,92% <!-- Gold!L3 -->
- và  lợi nhuận trung bình của việc tích luỹ này là 5,27%/năm <!-- Gold!K2 -->
+  <br>Lại giả định tiếp, từ đầu năm 2009 đến nay mỗi bốn tuần chị G dùng 100 USD mua một số gram vàng lẻ đến một phần triệu gram. Đến nay chị G có 428,352 <!-- Gold!I4 -->
+ gram vàng, trị giá 26.964,75 <!-- Gold!J4 -->
+ USD. Như vậy với cùng số tiền bỏ ra như chị U, nhưng chị G thu lại được nhiều hơn 41,92% <!-- Gold!L3 -->
+ và  lợi nhuận trung bình của việc tích luỹ này là 5,97%/năm <!-- Gold!K2 -->
 , thấp hơn gửi tiết kiệm VND và thấp hơn tích luỹ bằng quỹ đầu tư. Lợi nhuận trung bình này có lẽ cũng tương đương mức trượt giá trung bình trong cùng thời gian, điều đó cho thấy tích luỹ bằng vàng không có lời.
   <br>Các số liệu về tỷ giá USD-VND và giá vàng từ đầu năm 2009 đến nay được lấy từ website Vietcombank.com.vn và www.gold.org.</p>
   <p>Bảng dưới đây so sánh lợi nhuận trung bình của việc đầu tư đều đặn vào các kênh từ năm 2009.</p>
