--- a/kinh-nghiem/linh-tinh/dia-chi.html
+++ b/kinh-nghiem/linh-tinh/dia-chi.html
@@ -105,18 +105,22 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
 @media (max-width: 399px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:10px; }
+  .portimg { width:100%; }
 
 }
 @media (min-width: 400px) and (max-width: 499px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:20px; }
+  .portimg { width:100%; }
 
 }
 @media (min-width: 500px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:40px; }
+  .portimg { margin: auto; width:45%; }
 
 }
 @media (min-width: 1260px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:40px; }
+  .portimg { margin: auto; width:45%; }
 
 }
 
@@ -220,10 +224,10 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 <br>Google thì đưa ra giải-pháp mở <a href="https://maps.google.com/pluscodes/" target='_blank'>Plus Codes</a>, cho phép các nhà-phát-triển tự-do làm ra các hệ-thống dựa trên Plus Codes. Trong Google Maps, các ô-vuông có cạnh ba mét, mỗi ô-vuông được chỉ đến bằng một plus codes gồm bẩy chữ-cái và chữ-số, kèm theo địa-danh cấp tỉnh/thành-phố, ví-dụ cửa Nam chợ Bến-Thành là <a href="https://www.google.com/maps/place/7P28QMCX%2BQ7X/@10.7719875,106.6976872,19z/data=!4m4!3m3!8m2!3d10.7719875!4d106.6982344" target='_blank'>QMCX+Q7X , Hồ Chí Minh, Việt Nam</a>. Thật-ra phần địa-danh cấp tỉnh/thành-phố có-thể được thay bằng bốn chữ-cái và chữ-số, đó là ô-vuông có cạnh 110 Km chứa ô-vuông ba mét kia.
 <br>Ưu-điểm của toạ-độ địa-lý (và What3words, Plus Codes) so với địa-chỉ nhà là có-thể chỉ đến từng lối-ra-vào của toà-nhà hay khu-đất lớn trong khi địa-chỉ nhà không nêu rõ được.</p>
 <p>Năm 2020, Bưu-điện Việt-Nam dùng Plus Codes để làm ra <a href="https://vpostcode.vn" target='_blank'>Vpostcode</a>. Mỗi ô-vuông có cạnh ba mét trên khắp Việt-Nam có một Vpostcode gồm 12 chữ-cái và chữ-số, trong đó năm chữ-số đầu tiên là mã-bưu-chính nơi ô-vuông đó và phần còn lại là plus codes. Mỗi địa-điểm ở Việt-Nam tự-động có một Vpostcode bất kể nơi đó có nhà hay không.</p>
-<p>Năm 2022, Bưu-điện Việt-Nam lại làm ra <a href="https://ndas.vn" target='_blank'>Địa chỉ số</a>. Mỗi lối-ra-vào căn-nhà hoặc khu-đất ở Việt-Nam sẽ được mang một địa-chỉ-số gồm mười chữ-số, trong đó năm chữ-số đầu tiên là mã-bưu-chính nơi căn-nhà đó và phần còn lại là số-thứ-tự của địa-điểm đó khi vào sổ, ví-dụ <a href="https://ndas.vn/#/map/7100901241" target='_blank'>NDAS:7100901241</a> là địa-chỉ-số của cửa Tây chợ Bến-Thành. Địa-chỉ-số không tự-động có như Vpostcode mà phải do nhân-viên bưu-điện vào-sổ sau khi đến tận-nơi xem-xét.</p>
-<p>Vì được vào-sổ nên NDAS có tính-chất chính-thức hơn Vpostcode vốn do máy-móc tự-động sinh ra. Một lối-ra-vào chỉ có một NDAS trong khi Vpostcode của cùng một địa-điểm có-thể khác nhau từng lúc do độ-chính-xác của máy và thời-tiết lúc mở máy.</p>
-<p>Khi đã được vào-sổ, mỗi địa-chỉ-số gắn liền với một toạ-độ địa-lý dạng plus codes, tên ba cấp đơn-vị hành-chính từ phường/xã đến tỉnh/thành-phố, và có-thể được gắn thêm thôn/ấp hoặc số-nhà, tên-đường, tên doanh-nghiệp, tên chủ-hộ, số-điện-thoại, địa-chỉ e-mail. Do có chứa plus codes nên NDAS cũng có ưu-điểm giống như plus codes đối với những toà-nhà hoặc khu-đất lớn.</p>
-<p>Ngày 30/5/2022, quyết-định số 654/QĐ-TTg đã được ban-hành, trong đó có mục-tiêu đến năm 2025 phải vào-sổ địa-chỉ-số 100% các căn-nhà cả nước. Trong năm 2021, <a href="http://baobacgiang.com.vn/bg/kinh-te/366009/buu-dien-tinh-bac-giang-hoan-thanh-thu-thap-ma-dia-chi-buu-chinh-vpostcode.html" target='_blank'>tỉnh Bắc-Giang đã vào-sổ plus codes được 100% nhà trong tỉnh</a>, sau đó đã đổi sang NDAS.</p>
+<p>Năm 2022, Bưu-điện Việt-Nam lại làm ra <a href="https://diachiso.gov.vn" target='_blank'>Địa-chỉ-số</a>. Mỗi lối-ra-vào căn-nhà hoặc khu-đất ở Việt-Nam sẽ được mang một địa-chỉ-số gồm mười chữ-số, trong đó năm chữ-số đầu tiên là mã-bưu-chính nơi căn-nhà đó và phần còn lại là số-thứ-tự của địa-điểm đó khi vào sổ, ví-dụ <a href="https://diachiso.gov.vn/#/map/7100901241" target='_blank'>7100901241</a> là địa-chỉ-số của cửa Tây chợ Bến-Thành. Địa-chỉ-số không tự-động có như Vpostcode mà phải do nhân-viên bưu-điện vào-sổ sau khi đến tận-nơi xem-xét.</p>
+<p>Vì được vào-sổ nên Địa-chỉ-số có tính-chất chính-thức hơn Vpostcode vốn do máy-móc tự-động sinh ra. Một lối-ra-vào chỉ có một Địa-chỉ-số trong khi Vpostcode của cùng một địa-điểm có-thể khác nhau từng lúc do độ-chính-xác của máy và thời-tiết lúc mở máy.</p>
+<p>Khi đã được vào-sổ, mỗi địa-chỉ-số gắn liền với một toạ-độ địa-lý dạng plus codes, tên ba cấp đơn-vị hành-chính từ phường/xã đến tỉnh/thành-phố, và có-thể được gắn thêm thôn/ấp hoặc số-nhà, tên-đường, tên doanh-nghiệp, tên chủ-hộ, số-điện-thoại, địa-chỉ e-mail. Do có chứa plus codes nên Địa-chỉ-số cũng có ưu-điểm giống như plus codes đối với những toà-nhà hoặc khu-đất lớn. Hệ-thống Địa-chỉ-số cũng chứa luôn What3words code của vị-trí.</p>
+<p>Ngày 30/5/2022, quyết-định số 654/QĐ-TTg đã được ban-hành, trong đó có mục-tiêu đến năm 2025 phải vào-sổ địa-chỉ-số 100% các căn-nhà cả nước. Trong năm 2021, <a href="http://baobacgiang.com.vn/bg/kinh-te/366009/buu-dien-tinh-bac-giang-hoan-thanh-thu-thap-ma-dia-chi-buu-chinh-vpostcode.html" target='_blank'>tỉnh Bắc-Giang đã vào-sổ plus codes được 100% nhà trong tỉnh</a>, sau đó đã đổi sang Địa-chỉ-số.</p>
 
 <h3>Địa-chỉ-số sẽ được dùng như-thế-nào?</h3>
 <p>Hiện nay đã có trang web <a href="https://ndas.vn/" target='_blank'>ndas.vn</a>, mobile app cho iOS và Android cho giải-pháp địa-chỉ-số. Với những công-cụ này, mặc-dù còn chưa hoàn-chỉnh, người-dùng có-thể tìm vị-trí và tìm đường-đi một cách chính-xác đến một địa-chỉ, một doanh-nghiệp. Khi tìm một địa-chỉ-số trong hệ-thống NDAS, kết-quả sẽ là một vị-trí rõ-ràng trên bản-đồ. Khi tìm một doanh-nghiệp bằng tên hoặc tìm một căn-nhà bằng địa-chỉ kiểu thường, thì hệ-thống NDAS sẽ đưa ra những kết-quả gần giống để chọn xem.</p>
