--- a/huu-ich/ke-hoach-tai-chinh/khtc1.html
+++ b/huu-ich/ke-hoach-tai-chinh/khtc1.html
@@ -105,22 +105,27 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
 @media (max-width: 399px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:10px; }
+  .portimg { width:100%; }
 
 }
 @media (min-width: 400px) and (max-width: 499px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:20px; }
+  .portimg { width:100%; }
 
 }
 @media (min-width: 500px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:40px; }
+  .portimg { margin: auto; width:45%; }
 
 }
 @media (min-width: 1260px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:40px; }
+  .portimg { margin: auto; width:45%; }
 
 }
 
 </style>
+<!--
 <script type="application/ld+json">
 {
   "@context": "http://schema.org",
@@ -137,6 +142,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   }
 }
 </script>
+-->
 </head>
 
 <body>
