--- a/huu-ich/de-tien-vao-dau.html
+++ b/huu-ich/de-tien-vao-dau.html
@@ -105,18 +105,22 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
 @media (max-width: 399px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:10px; }
+  .portimg { width:100%; }
 
 }
 @media (min-width: 400px) and (max-width: 499px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:20px; }
+  .portimg { width:100%; }
 
 }
 @media (min-width: 500px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:40px; }
+  .portimg { margin: auto; width:45%; }
 
 }
 @media (min-width: 1260px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:40px; }
+  .portimg { margin: auto; width:45%; }
 
 }
 
@@ -189,7 +193,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   </div>
 
   <h1>Để tiền vào đâu</h1>
-  <div class="right">Viết lần đầu trong Tháng Sáu, 2012.</div>
+  <div class="right">Viết lần đầu trong Tháng Sáu, 2012.<br>Sửa lần-cuối trong Tháng-Giêng, 2024.</div>
   <p>Hẳn là những người có tiền tiết kiệm đang băn khoăn không biết sắp tới nên đưa tiền vào đâu trong tình hình lãi suất huy động vốn ở ngân hàng đang giảm dần.
   <br>Những người chưa có tiền tiết kiệm thì nên đọc bài <a href="tich-luy">tại sao cần phải tiết kiệm</a>.</p>
   <h2>Lý thuyết</h2>
@@ -248,7 +252,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
     <li>được những chuyên viên tài chính quản lý tiền,</li>
     <li>nhất là bạn không tốn thời gian điều hành doanh nghiệp.</li>
   </ul>
-  <p>Kết quả từ số liệu thực tế hơn 10 năm qua cho thấy <a href="dau-tu-co-phieu/so-tk-hay-dau-tu">lợi nhuận của quỹ đầu tư cao hơn ngân hàng</a>.</p>
+  <p>Kết quả từ số liệu thực tế hơn 15 năm qua cho thấy <a href="dau-tu-co-phieu/so-tk-hay-dau-tu">lợi nhuận của quỹ đầu tư cao hơn ngân hàng</a>.</p>
   <div><amp-img alt="Kết quả VFM" src="/data/VFM.png" height="281" width="565" layout="responsive"></amp-img></div>
 
   <div class="todiscuss">
