--- a/huu-ich/ke-hoach-tai-chinh/khtcp1.html
+++ b/huu-ich/ke-hoach-tai-chinh/khtcp1.html
@@ -106,18 +106,22 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
 @media (max-width: 399px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:10px; }
+  .portimg { width:100%; }
 
 }
 @media (min-width: 400px) and (max-width: 499px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:20px; }
+  .portimg { width:100%; }
 
 }
 @media (min-width: 500px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:40px; }
+  .portimg { margin: auto; width:45%; }
 
 }
 @media (min-width: 1260px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:40px; }
+  .portimg { margin: auto; width:45%; }
 
 }
 
@@ -350,6 +354,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
     <li>Nếu thu nhập T trong kết quả tính thấp hơn thực tế thì có thể tăng chi tiêu C, tăng các khoản trả góp G và các số tiền M, hoặc rút ngắn thời gian đi làm tích luỹ, tức là về hưu sớm.</li>
     <li>Thay đổi ở bất kỳ một trong các số trên tại bất cứ thời điểm nào trong suốt lộ trình đều ảnh hưởng lên toàn bộ lộ trình.</li>
   </ul>
+  <p>Bạn hãy hình-dung tổng-tài-sản của bạn là quả-cầu-tuyết đang lăn xuống dốc. Khi mới bắt-đầu lăn từ đỉnh-dốc, nó rất nhỏ và nhẹ, tăng lên rất chậm bằng những món tiền bạn đầu-tư vào mỗi tháng. Càng lăn xuống, quả-cầu-tuyết càng lớn thêm và nặng thêm nhờ dính thêm tuyết trên đường, giống như tổng-tài-sản của bạn nhận thêm lợi-nhuận từ việc đầu-tư. Tốc-độ tăng kích-thước và trọng-lượng của quả-cầu-tuyết không đều mà lớn dần theo thời-gian, đến cuối dốc nó nặng hàng tấn. Tổng-tài-sản của bạn cũng sẽ tăng như-vậy, khi bạn đến tuổi về-hưu, bạn có hàng chục tỷ đồng để sống an-nhàn. Muốn được như-vậy, bạn phải bắt-đầu tích-luỹ đầu-tư sớm, ngay khi mới làm ra tiền.</p>
   </div>
   </section>
   </amp-accordion>
@@ -537,7 +542,8 @@ Dòng nào để trống hoặc ghi zero ở cột C (Số tiền cần có) ngh
   <br>Hãy nhớ chép bảng tính ra một bản để lưu trước khi thay đổi, ví dụ: ngày 1.1.2020, chép file KHTC201906 thành file KHTC202001 và sửa file KHTC202001. Việc cập nhật kế hoạch nên làm ít nhất một lần mỗi năm, bắt đầu từ trang TT-chung rồi đến các trang Trả-góp, Mục-tiêu, Bảo-hiểm.</p>
   <p>Bạn cần phải đánh giá lại lợi nhuận trung bình của tổng tài sản trong thời gian qua để điều chỉnh vào bản kế hoạch mới. Để tính lợi nhuận trung bình thì bạn cần dùng bảng tính trong trang <a href="../hieu-qua-dau-tu">Tính hiệu quả của việc đầu tư</a>.</p>
   <p>Nếu không có thêm mục tiêu lớn thì tỷ lệ chi tiêu trên thu nhập không thay đổi nhiều sau mỗi lần cập nhật kế hoạch. Do đó bạn nên liệt kê đủ các mục tiêu từ lần lập kế hoạch đầu tiên.
-  <br>Bạn nên cố gắng đầu tư thêm hàng tháng cao hơn mức đã tính ra trong lộ trình để dự trữ cho những giai đoạn xấu trong tương lai. Nếu trong tương lai bạn không gặp phải những giai đoạn xấu thì phần dự trữ sẽ giúp bạn có cơ hội về hưu sớm hoặc tăng mức sống lên cao hơn.</p>
+  <br>Bạn nên cố gắng đầu tư thêm hàng tháng cao hơn mức đã tính ra trong lộ trình để dự trữ cho những giai đoạn xấu trong tương lai. Nếu trong tương lai bạn không gặp phải những giai đoạn xấu thì phần dự trữ sẽ giúp bạn có cơ hội về hưu sớm hoặc tăng mức sống lên cao hơn.
+  <br>Bắt-đầu lập kế-hoạch và tích-luỹ sớm, bạn sẽ có nhiều thời-gian để điều-chỉnh kế-hoạch khi có những yếu-tố thay-đổi như đã viết ở trên, và việc điều-chỉnh cũng không quá khó.</p>
 
 
 
